2003-04-04  Bruno Haible  <bruno@clisp.org>

	* modules/linebreak: New file.
	* MODULES.html.sh (func_all_modules): Add it.

2003-04-03  Bruno Haible  <bruno@clisp.org>

	* modules/utf8-ucs4: New file.
	* modules/utf16-ucs4: New file.
	* modules/ucs4-utf8: New file.
	* modules/ucs4-utf16: New file.
	* MODULES.html.sh (func_all_modules): Add them.

2003-04-02  Bruno Haible  <bruno@clisp.org>

	* modules/binary-io: New file.
	* MODULES.html.sh (func_all_modules): Add it.

2003-04-01  Bruno Haible  <bruno@clisp.org>

	* modules/pathname: New file.
	* MODULES.html.sh (func_all_modules): Add it.

2003-03-28  Bruno Haible  <bruno@clisp.org>

	* modules/copy-file: New file.
	* MODULES.html.sh (func_all_modules): Add it.

2003-02-20  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh (func_all_modules): Add poll.

2003-02-19  Paolo Bonzino  <bonzini@gnu.org>

	* modules/poll: New file.

2003-02-18  Bruno Haible  <bruno@clisp.org>

	* MODULES.html.sh (func_all_modules): Add mathl.

2003-02-18  Paolo Bonzino  <bonzini@gnu.org>

	* modules/mathl: New file.

2003-02-17  Bruno Haible  <bruno@clisp.org>

	* modules/mkdtemp: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-30  Bruno Haible  <bruno@clisp.org>

	* modules/vasnprintf, modules/vasprintf: New modules.
	* MODULES.html.sh (func_all_modules): Add them.

2003-01-29  Bruno Haible  <bruno@clisp.org>

	* modules/stpncpy: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-28  Bruno Haible  <bruno@clisp.org>

	* modules/c-ctype: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-27  Bruno Haible  <bruno@clisp.org>

	* modules/xsetenv: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-23  Bruno Haible  <bruno@clisp.org>

	* modules/minmax: New module.
	* MODULES.html.sh (func_all_modules): Add it.

2003-01-22  Bruno Haible  <bruno@clisp.org>

	* modules/exit: New module.
	* MODULES.html.sh (func_all_modules): Add it.
