@@ -1,3 +1,8 @@
+2003-04-10  Bruno Haible  <bruno@clisp.org>
+
+	* findprog.h: New file, from GNU gettext.
+	* findprog.c: New file, from GNU gettext.
+
 2003-04-05  Jim Meyering  <jim@meyering.net>
 
 	Merge changes from Coreutils.
