@@ -1,3 +1,8 @@
+2003-04-10  Bruno Haible  <bruno@clisp.org>
+
+	* findprog.m4: New file.
+	* eaccess.m4: New file.
+
 2003-04-04  Bruno Haible  <bruno@clisp.org>
 
 	* linebreak.m4: New file.
