@@ -1,3 +1,8 @@
+2003-04-10  Bruno Haible  <bruno@clisp.org>
+
+	* modules/findprog: New file.
+	* MODULES.html.sh (func_all_modules): Add it.
+
 2003-04-04  Bruno Haible  <bruno@clisp.org>
 
 	* modules/linebreak: New file.
